fix logo stretching on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -43,8 +43,8 @@ body {
 }
 
 .zen-frog {
-    width: 500px;
-    max-width: 100%;
+    max-width: 500px;
+    width: 100%;
     height: auto;
 }
 
